frontend/test/should_fail/exectype_AssignSetmapEmptyToVar3.grg
using exectype;

rule r
{
	modify  {
		exec(y:int=42 ;> {b:boolean=y.empty()});
	}
}